--- a/src/App.css
+++ b/src/App.css
@@ -68,6 +68,8 @@
   border-left: 1px solid rgba(0, 0, 0, 0.1);
   border-right: 1px solid rgba(0, 0, 0, 0.1);
   margin: 0 150px 0 150px;
+  display: flex;
+  flex-direction: column;
 }
 /* column style */
 
@@ -78,6 +80,7 @@
   border-right: 1px solid rgba(0, 0, 0, 0.1);
   text-align: center;
   margin: 0 !important;
+  flex-grow: 1;
 }
 
 /* tasks style */
