create actions and reducers

--- a/src/App.css
+++ b/src/App.css
@@ -115,3 +115,43 @@
   text-align: left;
   padding: 10px;
 }
+
+/* task adder style */
+
+.task-adder {
+  border-radius: 3px;
+  min-height: 200px;
+  margin: 15px 0;
+  background-color: white;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
+  padding-bottom: 10px;
+}
+
+.task-adder-label {
+  color: darkgray;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  font-weight: bold;
+  font-family: 'Roboto';
+}
+
+.task-adder-label p {
+  margin: 0 !important;
+}
+
+.task-adder-form {
+  padding: 5px 15px;
+}
+
+.submit-btn {
+  width: 100%;
+  margin-top: 5px;
+}
+
+textarea {
+  resize: none !important;
+  align-items: center;
+  margin-top: 5px !important;
+}
