--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,6 @@
 /* board style */
 
 .board-container {
-  height: 100vh;
   background-color: #f8f8f8;
 }
 
@@ -58,13 +57,13 @@
   align-items: center;
 }
 
-.list-name {
+.column-name {
   text-align: center;
   font-family: 'Roboto', sans-serif;
   padding-top: 20px;
 }
 
-.list-container {
+.column-container {
   border-left: 1px solid rgba(0, 0, 0, 0.1);
   border-right: 1px solid rgba(0, 0, 0, 0.1);
   margin: 0 180px 0 180px;
@@ -73,8 +72,8 @@
 }
 /* column style */
 
-.list-column {
-  height: 100vh;
+.column-style {
+  height: calc(100vh - 53px);
   background-color: #f8f8f8;
   border-left: 1px solid rgba(0, 0, 0, 0.1);
   border-right: 1px solid rgba(0, 0, 0, 0.1);
@@ -118,6 +117,13 @@
   padding: 10px;
 }
 
+.task-delete-button {
+  transition: ease 0.3s;
+}
+.task-delete-button:hover {
+  color: red;
+  font-size: 30px;
+}
 /* task adder style */
 
 .task-adder {
